# dadabooks

./: .gitignore  CMakeLists.txt  PluginTemplate.h  README.md  addauteur.cpp  addauteur.h  addauteur.ui  addbook.cpp  addbook.h  addbook.ui  addediteur.cpp  addediteur.h  addediteur.ui  dadabooks.cpp  dadabooks.h  dadabooks.pro  dadabooks.ui  editbook.cpp  editbook.h  editbook.ui  firstlaunch.cpp  firstlaunch.h  firstlaunch.ui  images.qrc  imageuploaddialog.cpp  imageuploaddialog.h  imageuploaddialog.ui  lenddialog.cpp  lenddialog.h  lenddialog.ui  main.cpp  previewbook.cpp  previewbook.h  previewbook.ui  searchdialog.cpp  searchdialog.h  searchdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  (+12 more)
config/: config.h
entity/: baseentity.cpp  baseentity.h  movie.cpp  movie.h  movieconverter.cpp  movieconverter.h  movieentity.cpp  movieentity.h
plugins/: abstractplugin.h  storagedefinition.h  storageplugin.h  thirdpartydefinition.h
plugins/Allocine/: Allocine.pro  allocine.cpp  allocine.h
plugins/Filmaffinity/: Filmaffinity.pro  filmaffinity.cpp  filmaffinity.h
plugins/amazon/: amazon.cpp  amazon.h  amazon.json  amazon.pro
plugins/amazonFilms/: amazonFilms.cpp  amazonFilms.h  amazonFilms.pro
plugins/casadellibro/: casadellibro.cpp  casadellibro.h  casadellibro.pro
plugins/chapitre/: chapitre.cpp  chapitre.h  chapitre.pro
plugins/moviecovers/: moviecovers.cpp  moviecovers.pro
plugins/storage/: storagedefinition.h
storage/: xmlstorage.cpp  xmlstorage.h
tools/: exceptioninterface.h  logger.cpp  logger.h  networkmanager.cpp  networkmanager.h  pluginloader.cpp  pluginloader.h  settings.cpp  settings.h  storage.cpp  storage.h  stringtools.cpp  stringtools.h
ui/: additemdialog.cpp  additemdialog.h  additemdialog.ui  apidialog.cpp  apidialog.h  apidialog.ui  editbook.cpp  editbook.h  editbook.ui  firstlaunch.cpp  firstlaunch.h  firstlaunch.ui  imageuploaddialog.cpp  imageuploaddialog.h  imageuploaddialog.ui  storageselectiondialog.cpp  storageselectiondialog.h  storageselectiondialog.ui
